--- a/examples/Paperjs.org/HitTesting.html
+++ b/examples/Paperjs.org/HitTesting.html
@@ -7,9 +7,9 @@
     <script type="text/javascript" src="../../dist/paper-full.js"></script>
     <script type="text/paperscript" canvas="canvas">
         var values = {
-            paths: 50,
-            minPoints: 5,
-            maxPoints: 15,
+            paths: 1,
+            minPoints: 50,
+            maxPoints: 100,
             minRadius: 30,
             maxRadius: 90
         };
@@ -17,7 +17,7 @@
         var hitOptions = {
             segments: true,
             stroke: true,
-            fill: true,
+            fill: false,
             tolerance: 5
         };
 
@@ -47,15 +47,17 @@
                 });
                 path.add(center + delta);
             }
-            path.smooth();
+            path.simplify();
             return path;
         }
 
         var segment, path;
         var movePath = false;
+        
         function onMouseDown(event) {
             segment = path = null;
             var hitResult = project.hitTest(event.point, hitOptions);
+            console.log(hitResult);
             if (!hitResult)
                 return;
 
@@ -73,24 +75,13 @@
                 } else if (hitResult.type == 'stroke') {
                     var location = hitResult.location;
                     segment = path.insert(location.index + 1, event.point);
-                    path.smooth();
                 }
             }
-            movePath = hitResult.type == 'fill';
-            if (movePath)
-                project.activeLayer.addChild(hitResult.item);
-        }
-
-        function onMouseMove(event) {
-            project.activeLayer.selected = false;
-            if (event.item)
-                event.item.selected = true;
         }
 
         function onMouseDrag(event) {
             if (segment) {
                 segment.point += event.delta;
-                path.smooth();
             } else if (path) {
                 path.position += event.delta;
             }
@@ -98,6 +89,6 @@
     </script>
 </head>
 <body>
-    <canvas id="canvas" resize style="background:black"></canvas>
+    <canvas id="canvas" resize></canvas>
 </body>
 </html>
