--- a/examples/Paperjs.org/Simplify.html
+++ b/examples/Paperjs.org/Simplify.html
@@ -6,54 +6,83 @@
     <link rel="stylesheet" href="../css/style.css">
     <script type="text/javascript" src="../../dist/paper-full.js"></script>
     <script type="text/paperscript" canvas="canvas">
-        var path;
 
-        var textItem = new PointText({
-            content: 'Click and drag to draw a line.',
-            point: new Point(20, 30),
-            fillColor: 'black',
-        });
+        var hitOptions = {
+            segments: true,
+            stroke: true,
+            fill: false,
+            tolerance: 10
+        };
+
+        var path, segment, closed;
 
         function onMouseDown(event) {
-            // If we produced a path before, deselect it:
             if (path) {
-                path.selected = false;
+                segment = null;
+                
+                var hitResult = path.hitTest(event.point, hitOptions);
+                if (!hitResult)
+                    return;
+    
+                if (hitResult) {
+                    path = hitResult.item;
+
+                    if (hitResult.type == 'segment') {
+                        segment = hitResult.segment;
+                    } else if (hitResult.type == 'stroke') {
+                        var location = hitResult.location;
+                        segment = path.insert(location.index + 1, event.point);
+                    }
+
+                    var offset = path.getOffsetOf(segment.point) || 0
+                    debugger;
+                    console.log(path.length);
+
+                    var point1 = path.getPointAt(path.length < offset + 40 ? path.length : offset + 40);
+
+                    // Create a small circle shaped path at the point:
+                    new Path.Circle({
+                        center: point1,
+                        radius: 3,
+                        fillColor: 'red'
+                    });
+
+                    var point2 = path.getPointAt(0 < offset - 40 ? offset - 40 : 0);
+
+                    // Create a small circle shaped path at the point:
+                    new Path.Circle({
+                        center: point2,
+                        radius: 3,
+                        fillColor: 'blue'
+                    });
+                }
+            } else {
+                path = new Path({
+                    segments: [event.point],
+                    strokeColor: 'black'
+                });
+                path.selected = true;
             }
-
-            // Create a new path and set its stroke color to black:
-            path = new Path({
-                segments: [event.point],
-                strokeColor: 'black',
-                // Select the path, so we can see its segment points:
-                fullySelected: true
-            });
         }
 
-        // While the user drags the mouse, points are added to the path
-        // at the position of the mouse:
         function onMouseDrag(event) {
-            path.add(event.point);
-
-            // Update the content of the text item to show how many
-            // segments it has:
-            textItem.content = 'Segment count: ' + path.segments.length;
+            if (closed) {
+                if (segment) {
+                    segment.point = event.point;
+                }
+            } else {
+                path.add(event.point);
+            }
         }
 
-        // When the mouse is released, we simplify the path:
         function onMouseUp(event) {
-            var segmentCount = path.segments.length;
+            if (closed) {
 
-            // When the mouse is released, simplify it:
-            path.simplify(10);
-
-            // Select the path, so we can see its segments:
-            path.fullySelected = true;
-
-            var newSegmentCount = path.segments.length;
-            var difference = segmentCount - newSegmentCount;
-            var percentage = 100 - Math.round(newSegmentCount / segmentCount * 100);
-            textItem.content = difference + ' of the ' + segmentCount + ' segments were removed. Saving ' + percentage + '%';
-
+            } else {
+                closed = true;
+                path.closed = true;
+                path.simplify();
+            }
         }
     </script>
 </head>
